refactor: feed 목록조회 APi 변경
#822